# project-euler

./: .gitignore  Cargo.toml  README.md
pkg/integer/: Cargo.toml
pkg/integer/src/: lib.rs
pkg/iter/: Cargo.toml
pkg/iter/src/: lib.rs
pkg/prime/: Cargo.toml
pkg/prime/src/: lib.rs
pkg/seq/: Cargo.toml
pkg/seq/src/: lib.rs
src/: common.rs  lib.rs  main.rs  solver.rs
src/problems/: p0001.rs  p0002.rs
src/utilities/: sequences.rs
src/utils/: integer.rs  integers.rs  mod.rs  primes.rs  seqs.rs
