[package]
name = "project-euler"
authors = ["Trevor Barker <tmbarker9@gmail.com>"]
repository = "https://github.com/tmbarker/project-euler"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils/mod.rs"

[dependencies]
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1.20.3"
